<resources>
    <string name="app_name">Engineer Guru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">First Year</string>
    <string name="menu_gallery">Second Year</string>
    <string name="menu_slideshow">Third Year</string>
    <string name="menu_tools">Fourth Year</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Exit</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_address">Email Address</string>
    <string name="update">Update</string>

    <string name="send_code">Send Code</string>
</resources>
