<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_firstYear"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_secondYear"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_thirdYear"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_slideshow"/>
        <item
            android:id="@+id/nav_fourthYear"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_tools"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item

                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
